--- a/style.css
+++ b/style.css
@@ -36,6 +36,14 @@ header {
     margin-bottom: 3rem;
 }
 
+.avatar {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin-bottom: 1.5rem;
+    border: 3px solid var(--border);
+}
+
 h1 {
     font-size: 2.5rem;
     font-weight: 700;
